resolved problem with the search icon not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -172,6 +172,7 @@ nav input {
   border: 0;
   background-image: linear-gradient(#757575 50%, #5f5f5f 50%);
   color: wheat;
+  height: 20px;
 }
 
 nav > ul {
@@ -205,15 +206,17 @@ header img {
 }
 
 #verse {
-  height: 100px;
+  height: 110px;
 }
 
 #share {
-  height: 150px;
+  height: 100px;
 }
 
 #watch {
-  height: 50px;
+  height: 30px;
+  width: 540px;
+  padding-top: 20px;
 }
 
 label {
@@ -221,11 +224,17 @@ label {
   background-image: linear-gradient(#757575 50%, #5f5f5f 50%);
   border-radius: 10px;
   border: 1px solid gray;
+  height: 30px;
+  align-items: center;
 }
 
-nav i {
+.fa-apple {
   font-size: 30px;
   color: white;
+}
+
+.fa-search {
+  padding-left: 5px;
 }
 
 .products {
